<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.gigaspaces.http-session.qa</groupId>
		<artifactId>xap-session-sharing-manager-itests</artifactId>
		<version>11.0.0-SNAPSHOT</version>
	</parent>

	<artifactId>sys-tests</artifactId>
	<name>sys-tests</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>4.8.2</junit.version>
        <group>httpsessiontest</group>
	</properties>

	<repositories>
		<repository>
			<id>soapui</id>
			<url>http://www.soapui.org/repository/maven2</url>
		</repository>
	</repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>org.openspaces</id>
            <url>http://maven-repository.openspaces.org</url>
        </pluginRepository>
    </pluginRepositories>

	<dependencies>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.2.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>4.2.1</version>
            <scope>test</scope>
        </dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>org.hornetq</groupId>
            <artifactId>hornetq-core</artifactId>
            <version>2.2.21.Final</version>
        </dependency>

		<dependency>
			<groupId>com.gigaspaces</groupId>
			<artifactId>gs-openspaces</artifactId>
		</dependency>
		<dependency>
			<groupId>com.gigaspaces.http-session</groupId>
			<artifactId>gs-session-manager</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-io</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>1.7.13</version>
		</dependency>

		<dependency>
			<groupId>com.gigaspaces.http-session.qa</groupId>
			<artifactId>data-model</artifactId>
			<version>${gsVersion}</version>
		</dependency>

		<dependency>
			<groupId>com.esotericsoftware.kryo</groupId>
			<artifactId>kryo</artifactId>
			<version>${kryo.version}</version>
		</dependency>

		<dependency>
			<groupId>com.smartbear.soapui</groupId>
			<artifactId>soapui</artifactId>
			<version>5.0.0</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <artifactId>jfxrt</artifactId>
                    <groupId>javafx</groupId>
                </exclusion>
            </exclusions>
		</dependency>


        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.3.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.3.0</version>
        </dependency>

    </dependencies>

	<build>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
				<executions>
					<execution>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
                    <testFailureIgnore>false</testFailureIgnore>
                    <argLine>-Xmx2g -Xms2g -XX:MaxPermSize=512m</argLine>
					<!--<includes>
						<include>**/SystemTestSuite.java</include>
					</includes>-->
                    <includes>
                        <include>**/newtests/**</include>
                    </includes>
					<excludes>
						<exclude>**/*SystemTestCase*</exclude>
						<exclude>**/*Abstract*</exclude>
						<exclude>**/*TestWithoutLoginBase*</exclude>
						<exclude>**/*TestWithLoginBase*</exclude>
					</excludes>
					<additionalClasspathElements>
						<additionalClasspathElement>src/test/resources</additionalClasspathElement>
					</additionalClasspathElements>
                    <systemProperties>
                        <group>${group}</group>
                    </systemProperties>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
                <version>2.3.2</version>
            </plugin>

            <plugin>
                <groupId>com.gigaspaces</groupId>
                <artifactId>newman-test-generator-plugin</artifactId>
                <version>1.0.1-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <type>httpsession</type>
                    <outputFile>${project.build.directory}/http-session-tests.json</outputFile>
                    <includeTests>true</includeTests>
                    <scanner>com.gigaspaces.newman.testgenerator.scanner.JUnitScanner</scanner>
                    <packages>
                        <package>com.gigaspaces.httpsession.qa.newtests</package>
                    </packages>
                </configuration>
            </plugin>
		</plugins>
	</build>
</project>
